# minerva

./: .gitignore  01-executive-summary.md  App.tsx  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES_v0.1.md  TEST_INFRA.md  TEST_READY.md  index.css  index.html  metadata.json  pnpm-lock.yaml  pyproject.toml  types.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: benchmark_failure.md  bug_report.md  feature_request.md  research_idea.md
.github/workflows/: ci.yml  deploy.yml
benchmarks/: README.md
benchmarks/reports/: benchmark_v5.md
components/: CognitiveArchitecture.tsx  CommandLineTerminal.tsx  ContextPipeline.tsx  IntegrationMap.tsx  MemoryGraph.tsx  QuantumScene.tsx  RoadmapOrbit.tsx
docs/: architecture.md  benchmark_methodology.md  design_decisions.md  open_source_audit.md  repository_review.md  retrieval_modes.md  roadmap.md
examples/: quickstart.py
minerva/: __init__.py  cli.py  db.py  embeddings.py  prompt_builder.py  retrieval.py  server.py
tests/: adversarial_evaluator.py  adversarial_v4.db  benchmark.py  conftest.py  context_comparison.py  evaluator.py  forensic_analyzer.py  generalization_personal.db  generalization_research.db  generalization_startup.db  generate_adversarial_data.py  run_v5_benchmark.py  stress_test.db  stress_test.py  test_db.py  test_e2e.py  test_lazy_simulation.py  test_new_gaps.py  test_prompt_builder.py  test_retrieval.py
