[project]
name = "minerva"
version = "0.1.0"
description = "Minerva Local Background Service and MCP Server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.9.0",
    "click>=8.1.0",
    "onnxruntime>=1.16.0",
    "tokenizers>=0.15.0",
    "numpy>=1.20.0",
    "huggingface-hub>=0.20.0"
]

[project.scripts]
minerva = "minerva.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=7.0.0"
]
